nginx/pod-simple.yaml
# kubectl -n test-nginx exec -it pod-nginx-simple-5c9957f97b-s6h9v -- /bin/sh
# kubectl --namespace test-nginx logs pod-nginx-simple-5c9957f97b-w7ld8
# rewrite name keycloak.kube.local keycloak-service.keycloak-ns.svc.cluster.local
# kubectl run -it --rm --restart=Never --image=infoblox/dnstools:latest dnstools
# dig simple.kube.local
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-nginx-simple
  namespace: test-nginx
  labels:
    app: pod-nginx-simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-nginx-simple
  template:
    metadata:
      labels:
        app: pod-nginx-simple
    spec:
      containers:

      - name: oauth2-sidecar
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.4.1
        imagePullPolicy: IfNotPresent

        ports:

          - containerPort: 8809
            protocol: TCP
            name: http

      - name: pod-nginx-simple
        image: l_nginx:sso
        imagePullPolicy: Never

        ports:

          - containerPort: 4321
            protocol: TCP

        resources:

          limits:
            cpu: 100m
            memory: 512Mi

          requests:
            cpu: 10m
            memory: 128Mi

#        readinessProbe:
#
#          exec:
#            command: ["curl", "--silent", "http://localhost:4321/status"]
#          failureThreshold: 2
#          initialDelaySeconds: 4
#          periodSeconds: 10
#          successThreshold: 1
#          timeoutSeconds: 5
#
#        livenessProbe:
#
#          tcpSocket:
#            port: 4321
#          failureThreshold: 6
#          initialDelaySeconds: 8
#          periodSeconds: 30
#          successThreshold: 1
#          timeoutSeconds: 5

        volumeMounts:

          - name: nginx-configuration
            mountPath: /etc/nginx/nginx.conf
                       /usr/local/openresty/nginx/conf/nginx.conf
            subPath: NGINX_CONF_KEY

          - name: application-configuration
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: APP_CONF_KEY

          - name: application-html
            mountPath: /usr/share/nginx/html/index.html
            subPath: APP_HTML_KEY

      volumes:

        - name: nginx-configuration
          secret:
            secretName: test-nginx-secret

        - name: application-configuration
          secret:
            secretName: test-nginx-secret

        - name: application-html
          secret:
            secretName: test-nginx-secret
