nginx/pod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-nginx-service
  namespace: test-nginx
spec:
  selector:
    app: pod-nginx-simple
  ports:
    - name: http
      protocol: TCP
      port: 4321
      targetPort: 4321
